--- a/BozaPodroz/MainPage.xaml
+++ b/BozaPodroz/MainPage.xaml
@@ -5,6 +5,11 @@
 
     <StackLayout VerticalOptions="Center"
                  Margin="20,0,20,0">
+        <Image x:Name="iconImage"
+               Aspect="AspectFit"
+               HeightRequest="150"
+               HorizontalOptions="FillAndExpand"
+               Margin="0, 0, 0, 15"/>
         <Entry x:Name="EmailEntry" Placeholder="Email address"
                Keyboard="Email" />
         <Entry x:Name="PasswordEntry" Placeholder="Password"
